--- a/virtualization2.html
+++ b/virtualization2.html
@@ -35,6 +35,6 @@
       <figcaption>figure 1. Server and network virtualization</figcaption>
     </figure>
     <hr>
-    <p><a href="https://google.com">Click here</a> for more details</p>
+    <p><a href="https://www.citrix.com/fr-fr/solutions/vdi-and-daas/what-is-virtualization.html">Click here</a> for more details</p>
   </body>
 </html>
